--- a/index.html
+++ b/index.html
@@ -19,8 +19,47 @@
         </div>
     </div>
     <div class="sign-up">
-        <div class="description"></div>
-        <div class="sign-up-form"></div>
+        <div class="description">  
+            <p class="para-1">
+                The holy religion for cats, where we worship the almighty chonky cats.<br>
+                They are squishy, they are cool, chillest buddies you will ever find!<br>
+                Join the cult <em>today</em> for a limited time only premium discount!
+            </p>
+            <p class="para-2">
+                You know <em>you</em> want to.
+            </p>
+        </div>
+        <div class="sign-up-section">
+            <form action="" method="post" class="sign-up-form">
+                <div>
+                    <label for="first-name">FIRST NAME</label>
+                    <input id="first-name" type="text" name="first-name" required>
+                </div>
+                <div>
+                    <label for="last-name">LAST NAME</label>
+                    <input id="last-name" type="text" name="last-name" required>                  
+                </div>
+                <div>
+                    <label for="email">EMAIL</label>                    
+                    <input id="email" type="email" name="email">
+                </div>
+                <div>
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input id="phone-number" type="number" name="phone-number">
+                </div>
+                <div>
+                    <label for="password">PASSWORD</label>
+                    <input id="password" type="password" name="password" required>
+                </div>
+                <div>
+                    <label for="confirm-password">CONFIRM PASSWORD</label>
+                    <input id="confirm-password" type="password" name="confirm-password" required>
+                </div>
+                <div class="sign-up-button">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
